# ofjustpy-components

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
demos/: README.md  build_bundle.py  demo_dock_undock.py  demo_hierarchy_navigation_using_italian_cuisine.py  demo_hierarchy_navigation_using_italian_cuisine_configurable_ui.py  demo_mouseover_slideshow.py  demo_paginate.py  demo_two_column_stackv.py  demo_var_length_list.py  demo_var_length_list_compound_slot.py  dummy_company_section_domain_components.py  generate_style_css.py  runner_app.py  the_app.py  with_hyperui.py
devel/: build_bundle.py  devel_hinav_refactored_try2.py  devel_hinav_refactored_try3.py  devel_hinav_refactored_try4.py  dummy_company_section_domain_components.py  generate_style_css.py  runner.py  td_color_selector_using_slider.py  td_color_shade_selector.py  td_color_shade_selector_using_linear_selector.py  td_dockar.py  td_dockar_2.py  td_hierarchy_navigator_sbs.py  td_hierarchy_navigator_try.py  td_hierarchy_navigator_varlist.py  td_linear_selector.py  td_mouseover_slideshow.py  td_paginate.py  td_sbs_var_lenght_list.py  td_stackd.py  the_app.py
devel_kv/: generate_style_css.py  td_linear_selector.py  td_mutable_circle_ssr.py  the_app.py
docs/: develdocs_hinav.rst  developer_docs.rst  enduser_docs.rst
src/kavya_components/: __init__.py  component_mouseover_slideshow_configurable_ui.py  hierarchy_naviator_refactored_try2.py  hierarchy_naviator_refactored_try3.py  hierarchy_naviator_refactored_try4.py  (+5 more)
tests/: test_create_webpage_instance.py  test_varlist.py
(+14 files in other folders)
