[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"



[project]
name = "ofjustpy-components"
maintainers = [
 { name="Kabira K", email= "kabira@monallabs.in"}
]
readme= "README.md"
dynamic = ["version", "description"]
license = { file="LICENSE" }
dependencies = ['ofjustpy',
			]
requires-python = ">=3.11"




[project.urls]
Home = "http://webworks.monallabs.in/ofjustpy/ofjustpy-components"
Documentation = "https://ofjustpy.github.io/ofjustpy_components"
Source = "https://github.com/ofjustpy/ofjustpy-components"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]



